--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1146,7 +1146,7 @@ section.lazy-placeholder:after {
     padding-left: .5rem;
   }
   .cid-s7tZjzbvo7 .text-element {
-    padding: 6rem;
+    padding: 3rem 6rem;
   }
 }
 @media (max-width: 767px) {
@@ -1314,7 +1314,7 @@ section.lazy-placeholder:after {
   width: auto;
 }
 .cid-s7VUmtmRwS .card-img span {
-  font-size: 72px;
+  font-size: 60px;
   color: #707070;
 }
 .cid-s7VUmtmRwS .card-box {
