create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1196,7 +1196,7 @@ section.lazy-placeholder:after {
   background-color: #c1c1c1;
 }
 .cid-s7tcdLDw76 .box {
-  background-image: url("../../../assets/images/captura-de-pantalla-2020-08-12-a-las-13.03.54-1261x699.png");
+  background-image: url("../../../assets/images/foto-video-949x646.png");
   background-size: cover;
   background-position: center;
   height: 400px;
@@ -1350,7 +1350,7 @@ section.lazy-placeholder:after {
   width: auto;
 }
 .cid-s7VUDoVDSg .card-img span {
-  font-size: 72px;
+  font-size: 60px;
   color: #707070;
 }
 .cid-s7VUDoVDSg .card-box {
@@ -1386,7 +1386,7 @@ section.lazy-placeholder:after {
   width: auto;
 }
 .cid-s7VUEfapNu .card-img span {
-  font-size: 72px;
+  font-size: 60px;
   color: #707070;
 }
 .cid-s7VUEfapNu .card-box {
@@ -1422,7 +1422,7 @@ section.lazy-placeholder:after {
   width: auto;
 }
 .cid-s7VUFlgBT6 .card-img span {
-  font-size: 72px;
+  font-size: 60px;
   color: #707070;
 }
 .cid-s7VUFlgBT6 .card-box {
@@ -1458,7 +1458,7 @@ section.lazy-placeholder:after {
   width: auto;
 }
 .cid-s7VVYUUdOV .card-img span {
-  font-size: 72px;
+  font-size: 60px;
   color: #707070;
 }
 .cid-s7VVYUUdOV .card-box {
